Try to fix flashcard text getting cut off issue

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -106,7 +106,7 @@ body {
 
 .front, .back {
 	backface-visibility: hidden;
-	position: absolute;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	display: flex;
